# shopping-list

./: database.py  main.py  models.py  notes.sqlite3  pyproject.toml  queries.py  routes.py  settings.py
alembic/: env.py  script.py.mako
alembic/versions/: 91142aa0466b_init.py  dd45187fd19f_init.py
